<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#616161"
    tools:context="com.example.rashed.inventory.DetailsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/product_name_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_name_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/product_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@+id/price_edit"
            />

        <TextView
            android:id="@+id/price_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/price_edit"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/quantity_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="8">

            <ImageButton
                android:id="@+id/decrease_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_remove_black" />

            <EditText
                android:id="@+id/quantity_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:inputType="number"
                android:maxLength="4" />

            <ImageButton
                android:id="@+id/increase_quantity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_add_black" />

        </LinearLayout>

        <TextView
            android:id="@+id/supplier_name_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_name_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/supplier_name_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_name_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/supplier_phone_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_phone_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/supplier_phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/supplier_phone_hint"
            android:inputType="phone" />

        <TextView
            android:id="@+id/supplier_email_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/supplier_email_title"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/supplier_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_address"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/image_TxtView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image" />

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

    </LinearLayout>
</ScrollView>
